--- a/NetworkClient/src/ru/geekbrains/java2/network/client/views/authDialog.fxml
+++ b/NetworkClient/src/ru/geekbrains/java2/network/client/views/authDialog.fxml
@@ -2,15 +2,18 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="202.0" prefWidth="317.0"
-            xmlns="http://javafx.com/javafx/11.0.1"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="202.0"
+            prefWidth="273.0" xmlns="http://javafx.com/javafx/11.0.1"
             fx:controller="ru.geekbrains.java2.network.client.controllers.AuthDialogController">
-   <children>
-      <Label layoutX="21.0" layoutY="25.0" text="Логин:"/>
-      <Label layoutX="14.0" layoutY="82.0" text="Пароль:"/>
-      <TextField fx:id="loginField" layoutX="87.0" layoutY="21.0"/>
-      <PasswordField fx:id="passwordField" layoutX="87.0" layoutY="78.0" onAction="#onFieldAction"/>
-      <Button fx:id="authButton" layoutX="88.0" layoutY="150.0" mnemonicParsing="false" onAction="#executeAuth"
-              prefHeight="25.0" prefWidth="149.0" text="Войти!"/>
-   </children>
+   <Label layoutX="21.0" layoutY="25.0" text="Логин:"/>
+   <Label layoutX="14.0" layoutY="65.0" text="Пароль:"/>
+   <TextField fx:id="loginField" layoutX="87.0" layoutY="21.0"/>
+   <PasswordField fx:id="passwordField" layoutX="87.0" layoutY="61.0" onAction="#onFieldAction"/>
+   <Button fx:id="authButton" layoutX="119.0" layoutY="165.0" mnemonicParsing="false" onAction="#executeAuth"
+           prefHeight="25.0" prefWidth="140.0" text="Войти!"/>
+   <Label fx:id="nickNameLabel" layoutX="5.0" layoutY="101.0" prefHeight="17.0" prefWidth="56.0" text="Никнейм:"
+          visible="false"/>
+   <TextField fx:id="nicknameField" layoutX="88.0" layoutY="97.0" visible="false"/>
+   <Button fx:id="regButton" layoutX="14.0" layoutY="165.0" mnemonicParsing="false" onAction="#executeReg"
+           text="Регистрация"/>
 </AnchorPane>
