--- a/NetworkClient/src/ru/geekbrains/java2/network/client/views/view.fxml
+++ b/NetworkClient/src/ru/geekbrains/java2/network/client/views/view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
@@ -9,8 +10,18 @@
     <SplitPane dividerPositions="0.2" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0"
                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-            <ListView fx:id="usersList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+            <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                  AnchorPane.topAnchor="0.0">
+                <ListView fx:id="usersList" maxHeight="1.7976931348623157E308" prefHeight="446.0"
+                          prefWidth="117.0"/>
+                <Button fx:id="changeNickButton" alignment="BOTTOM_CENTER" maxHeight="-Infinity"
+                        minHeight="-Infinity" mnemonicParsing="false" onAction="#changeNick" prefHeight="25.0"
+                        prefWidth="120.0" text="Change nickname" textAlignment="CENTER" VBox.vgrow="NEVER">
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                </Button>
+            </VBox>
         </AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="398.0" prefWidth="486.0"
